# ham10000-resnet-benchmark

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  test_cuda.py
src/ham10000_resnet_benchmark/: timer_script.py
