[project]
name = "ham10000-resnet-benchmark"
version = "0.1.0"
description = "Benchmark ResNet101 training on HAM10000 with PyTorch and Rye."

dependencies = [
    # PyTorchのバージョンは、利用したいものとCUDAバージョンに合わせてください
    # 例: PyTorch 2.3.0 for CUDA 12.1 の場合 (正確なバージョン文字列はPyTorchのサイトで確認)
    "torch==2.3.0+cu121",
    "torchvision==0.18.0+cu121",
    "torchaudio==2.3.0+cu121",
    "pandas",
    "scikit-learn",
    "pillow",
    "matplotlib",
]
requires-python = ">=3.9" # rye init や rye pin で指定したバージョンに合わせる
readme = "README.md"
license = {text = "MIT"}

[tool.rye]
managed = true
dev-dependencies = []

# --- ここから追加/修正 ---
[[tool.rye.sources]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121" # あなたのCUDAバージョンに合わせたURL (例: cu121, cu118など)
# --- ここまで追加/修正 ---

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"